--- a/python-application/template.yaml
+++ b/python-application/template.yaml
@@ -15,7 +15,7 @@ spec:
         - environment
       properties:
         app_name:
-          title: Component name
+          title: Component name test 
           type: string
           description: Provide a component (microservice) name
           pattern: '^([a-zA-Z][a-zA-Z0-9]*)(-[a-zA-Z0-9]+)*$'
