--- a/python-application/template/catalog-info.yaml
+++ b/python-application/template/catalog-info.yaml
@@ -8,6 +8,7 @@ metadata:
   annotations:
     github.com/project-slug: devops-brotherslab/${{values.app_name}}
     backstage.io/techdocs-ref: dir:.
+    argocd/app-name: ${{values.app_name}}
 spec:
   type: website
   lifecycle: production
