--- a/python-application/template.yaml
+++ b/python-application/template.yaml
@@ -59,6 +59,37 @@ spec:
       input:
         repoContentsUrl: ${{ steps['publish'].output.repoContentsUrl }}
         catalogInfoPath: "/catalog-info.yaml"
+        
+    # - id: argocd
+    #   name: Create New Application in Argo CD
+    #   action: http:backstage:request
+    #   input:
+    #     method: 'POST'
+    #     path: '/proxy/argocd/api/applications'
+    #     headers:
+    #       content-type: 'application/json'
+    #     body:
+    #       metadata:
+    #         name: ${{ parameters.appName }}
+    #         namespace: argocd
+    #       spec:
+    #         project: default
+    #         source:
+    #           repoURL: https://github.com/${{ parameters.orgName }}/${{ parameters.appName }}-config.git
+    #           targetRevision: master
+    #           path: manifests
+    #           helm:
+    #             valueFiles:
+    #               - values.${{ parameters.environment }}.yaml
+    #         destination:
+    #           server: https://kubernetes.default.svc
+    #           namespace: ${{ parameters.namespace }}
+    #         syncPolicy:
+    #           automated:
+    #             prune: true
+    #             selfHeal: true
+    #           syncOptions:
+    #             - CreateNamespace=true
 
   output:
     links:
