--- a/python-application/template.yaml
+++ b/python-application/template.yaml
@@ -25,7 +25,7 @@ spec:
           type: string
           description: Provide a component (microservice) name
           pattern: '^([a-zA-Z][a-zA-Z0-9]*)(-[a-zA-Z0-9]+)*$'
-        environment:
+        squad_name:
           title: Squad
           type: string
           description: Squad Name
