--- a/python-application/template.yaml
+++ b/python-application/template.yaml
@@ -41,7 +41,7 @@ spec:
         url: ./template
         values:
           app_name: ${{parameters.app_name}}
-          app_env: ${{parameters.environment}}
+          squad_name: ${{parameters.squad_name}}
 
     - id: publish
       name: Publish
