--- a/python-application/template.yaml
+++ b/python-application/template.yaml
@@ -14,20 +14,20 @@ spec:
   owner: platform-engineering
   type: service
   parameters:
-    - title: Fill in some steps
+    - title: Preencha as informações do novo serviço
       required:
         - app_name
         - squad_name
       properties:
         app_name:
-          title: Component name test 
+          title: Component Name
           type: string
-          description: Provide a component (microservice) name
+          description: Forneça um nome para o seu componente.
           pattern: '^([a-zA-Z][a-zA-Z0-9]*)(-[a-zA-Z0-9]+)*$'
         squad_name:
           title: Squad
           type: string
-          description: Squad Name
+          description: Nome do Squad responsável.
           enum:
             - squad-a
             - squad-b
@@ -40,7 +40,7 @@ spec:
         url: ./template
         values:
           app_name: ${{parameters.app_name}}
-          app_env: ${{parameters.environment}}
+          squad_name: ${{parameters.squad_name}}
 
     - id: publish
       name: Publish
